--- a/index.html
+++ b/index.html
@@ -5,24 +5,32 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>JP – Atalhos</title>
 
+<!-- fontes -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
 <style>
+    @font-face {
+        font-family: "Balqis";
+        src: url("https://fonts.cdnfonts.com/s/17394/Balqis.woff") format("woff");
+    }
+
     body {
         margin: 0;
         font-family: "Poppins", sans-serif;
-        background: #fdfdfd;
-        color: #333;
+        background: linear-gradient(180deg, #ffe0e7, #ffd6ea, #ffeef4);
+        min-height: 200vh;
+        color: #2d2d2d;
     }
 
     /* saudação */
     header {
-        padding: 40px 20px;
-        text-align: center;
-        font-size: 2.2rem;
-        font-weight: 600;
+        padding: 50px 40px;
+        font-family: "Balqis", cursive;
+        font-size: 4rem;
         background: linear-gradient(
             to bottom,
-            rgba(255,150,170,0.6),
-            rgba(255,180,190,0.3),
+            rgba(255,160,180,0.5),
+            rgba(255,200,210,0.25),
             transparent
         );
         position: sticky;
@@ -30,83 +38,80 @@
         backdrop-filter: blur(6px);
         z-index: 10;
         transition: opacity 0.4s ease;
+        text-align: left;
     }
 
-    /* quando rolar, saudação some */
     body.scrolled header {
         opacity: 0.35;
     }
 
-    /* container dos tópicos */
+    /* lista de tópicos na esquerda */
     .list {
-        width: 90%;
-        max-width: 500px;
-        margin: 30px auto;
+        margin-left: 40px;
+        margin-top: 30px;
+        width: 80%;
+        max-width: 600px;
     }
 
     .item {
-        background: rgba(255, 240, 240, 0.7);
-        padding: 18px 20px;
-        margin-bottom: 12px;
-        border-radius: 12px;
+        background: rgba(255, 240, 245, 0.7);
+        padding: 24px 28px;
+        margin-bottom: 18px;
+        border-radius: 16px;
         cursor: pointer;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        font-size: 1.2rem;
+        font-size: 2rem;
         transition: background 0.3s;
     }
 
     .item:hover {
-        background: rgba(255, 225, 225, 0.9);
+        background: rgba(255, 225, 235, 0.9);
     }
 
-    /* seta */
     .arrow {
-        font-size: 1.3rem;
+        font-size: 2.1rem;
         transition: transform 0.35s ease;
     }
 
-    /* área que expande */
     .content {
         max-height: 0;
         overflow: hidden;
         background: rgba(255, 240, 245, 0.8);
-        margin-top: -8px;
-        border-radius: 0 0 12px 12px;
-        padding: 0 20px;
+        margin-top: -10px;
+        border-radius: 0 0 16px 16px;
+        padding: 0 28px;
         transition: max-height 0.45s ease;
     }
 
     .content p {
-        margin-top: 20px;
-        font-size: 1rem;
+        margin-top: 24px;
+        font-size: 1.2rem;
         color: #444;
     }
 
-    /* botão acessar */
     .open-btn {
         display: inline-block;
-        margin: 15px 0 25px;
-        padding: 12px 22px;
+        margin: 15px 0 28px;
+        padding: 14px 26px;
         background: #ffb3c6;
         color: #fff;
-        border-radius: 10px;
+        border-radius: 14px;
         text-decoration: none;
-        font-weight: 600;
+        font-family: "Give You Glory", cursive;
+        font-size: 1.5rem;
         transition: 0.3s;
     }
 
     .open-btn:hover {
         background: #ff99b3;
-        transform: scale(1.03);
+        transform: scale(1.05);
     }
 
-    /* seta virada pra cima */
     .item.active .arrow {
         transform: rotate(90deg);
     }
-
 </style>
 </head>
 <body>
@@ -115,41 +120,31 @@
 
 <div class="list">
 
-    <div class="item" onclick="toggle(0)">
-        TikTok <span class="arrow">ᐅ</span>
-    </div>
+    <div class="item" onclick="toggle(0)">TikTok <span class="arrow">ᐅ</span></div>
     <div class="content">
         <p>Assistir um tiktokzinho né JP? Para relaxar um pouquinho..</p>
         <a class="open-btn" href="https://www.tiktok.com" target="_blank">Acessar TikTok</a>
     </div>
 
-    <div class="item" onclick="toggle(1)">
-        Instagram <span class="arrow">ᐅ</span>
-    </div>
+    <div class="item" onclick="toggle(1)">Instagram <span class="arrow">ᐅ</span></div>
     <div class="content">
         <p>Eai JP, alguém mandou mensagem?.. Ou vai só ver o feed mesmo?..</p>
         <a class="open-btn" href="https://www.instagram.com" target="_blank">Acessar Instagram</a>
     </div>
 
-    <div class="item" onclick="toggle(2)">
-        YouTube <span class="arrow">ᐅ</span>
-    </div>
+    <div class="item" onclick="toggle(2)">YouTube <span class="arrow">ᐅ</span></div>
     <div class="content">
         <p>Assistir um videozinho né naqueles pique.. Ou só vai de shorts mesmo? haha</p>
         <a class="open-btn" href="https://www.youtube.com" target="_blank">Acessar YouTube</a>
     </div>
 
-    <div class="item" onclick="toggle(3)">
-        ChatGPT <span class="arrow">ᐅ</span>
-    </div>
+    <div class="item" onclick="toggle(3)">ChatGPT <span class="arrow">ᐅ</span></div>
     <div class="content">
         <p>Chatzinho é daora mermão, vai tratar de algum assunto sério? Ou só algo que tu não conseguiu resolver ainda? Kkkkk</p>
         <a class="open-btn" href="https://chat.openai.com" target="_blank">Acessar ChatGPT</a>
     </div>
 
-    <div class="item" onclick="toggle(4)">
-        Gmail <span class="arrow">ᐅ</span>
-    </div>
+    <div class="item" onclick="toggle(4)">Gmail <span class="arrow">ᐅ</span></div>
     <div class="content">
         <p>O que foi dessa vez? Código? Vai responder e-mail?..</p>
         <a class="open-btn" href="https://mail.google.com" target="_blank">Acessar Gmail</a>
@@ -158,21 +153,18 @@
 </div>
 
 <script>
-    // saudação
-    const h = new Date().getHours();
+    const hour = new Date().getHours();
     const g = document.getElementById("greeting");
     g.innerHTML =
-        h < 12 ? "Bom dia, JP!" :
-        h < 18 ? "Boa tarde, JP!" :
-                 "Boa noite, JP!";
+        hour < 12 ? "Bom dia, JP!" :
+        hour < 18 ? "Boa tarde, JP!" :
+                     "Boa noite, JP!";
 
-    // sumir saudação ao rolar
     window.onscroll = () => {
         if (window.scrollY > 10) document.body.classList.add("scrolled");
         else document.body.classList.remove("scrolled");
     };
 
-    // animação expandir tópicos
     function toggle(i) {
         const items = document.querySelectorAll(".item");
         const contents = document.querySelectorAll(".content");
@@ -182,13 +174,11 @@
 
         const isOpen = item.classList.contains("active");
 
-        // fecha todos antes de abrir outro
         items.forEach((el, x) => {
             el.classList.remove("active");
             contents[x].style.maxHeight = "0px";
         });
 
-        // se estava fechado → abre
         if (!isOpen) {
             item.classList.add("active");
             content.style.maxHeight = content.scrollHeight + "px";
