--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <!-- fontes -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500;700&display=swap" rel="stylesheet">
+
 <style>
     @font-face {
         font-family: "Balqis";
@@ -17,7 +19,7 @@
     body {
         margin: 0;
         font-family: "Poppins", sans-serif;
-        background: linear-gradient(180deg, #ffe0e7, #ffd6ea, #ffeef4);
+        background: linear-gradient(180deg, #ffe0e7, #ffd6ea, #ffe7d1, #ffc8b8, #ffd2d2);
         min-height: 200vh;
         color: #2d2d2d;
     }
@@ -29,8 +31,8 @@
         font-size: 4rem;
         background: linear-gradient(
             to bottom,
-            rgba(255,160,180,0.5),
-            rgba(255,200,210,0.25),
+            rgba(255,150,150,0.5),
+            rgba(255,180,120,0.25),
             transparent
         );
         position: sticky;
@@ -45,7 +47,7 @@
         opacity: 0.35;
     }
 
-    /* lista de tópicos na esquerda */
+    /* lista */
     .list {
         margin-left: 40px;
         margin-top: 30px;
@@ -55,14 +57,14 @@
 
     .item {
         background: rgba(255, 240, 245, 0.7);
-        padding: 24px 28px;
-        margin-bottom: 18px;
-        border-radius: 16px;
+        padding: 28px 28px;
+        margin-bottom: 20px;
+        border-radius: 18px;
         cursor: pointer;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        font-size: 2rem;
+        font-size: 2.1rem;
         transition: background 0.3s;
     }
 
@@ -71,46 +73,69 @@
     }
 
     .arrow {
-        font-size: 2.1rem;
+        font-size: 2.3rem;
         transition: transform 0.35s ease;
     }
 
     .content {
         max-height: 0;
         overflow: hidden;
-        background: rgba(255, 240, 245, 0.8);
+        background: rgba(255, 240, 245, 0.85);
         margin-top: -10px;
-        border-radius: 0 0 16px 16px;
+        border-radius: 0 0 18px 18px;
         padding: 0 28px;
         transition: max-height 0.45s ease;
     }
 
     .content p {
         margin-top: 24px;
-        font-size: 1.2rem;
+        font-size: 1.25rem;
         color: #444;
     }
 
     .open-btn {
         display: inline-block;
-        margin: 15px 0 28px;
+        margin: 15px 0 30px;
         padding: 14px 26px;
-        background: #ffb3c6;
+        background: #ffa8a8;
         color: #fff;
         border-radius: 14px;
         text-decoration: none;
         font-family: "Give You Glory", cursive;
-        font-size: 1.5rem;
+        font-size: 1.6rem;
         transition: 0.3s;
     }
 
     .open-btn:hover {
-        background: #ff99b3;
+        background: #ff8e8e;
         transform: scale(1.05);
     }
 
     .item.active .arrow {
         transform: rotate(90deg);
+    }
+
+    /* caixa lateral */
+    .side-box {
+        width: 350px;
+        background: rgba(255,255,255,0.9);
+        border-radius: 22px;
+        padding: 30px;
+        height: fit-content;
+        box-shadow: 0 0 15px rgba(255, 150, 150, 0.25);
+    }
+
+    .side-title {
+        font-family: "Caveat", cursive;
+        font-size: 2.3rem;
+        margin-top: 0;
+        margin-bottom: 10px;
+    }
+
+    .side-box p {
+        font-size: 1.15rem;
+        line-height: 1.7;
+        margin-bottom: 18px;
     }
 </style>
 </head>
@@ -121,30 +146,36 @@
 <div style="display:flex; gap:40px; padding:20px;">
 
 <div class="list" style="flex:1;">
-    <!-- conteúdo original mantido -->
-    <!-- (vou inserir exatamente como estava, só movido para cá) -->
+
     <div class="item" onclick="toggle(0)">TikTok <span class="arrow">ᐅ</span></div>
-    <div class="content"><p>Assistir um tiktokzinho né JP? Para relaxar um pouquinho..</p><a class="open-btn" href="https://www.tiktok.com" target="_blank">Acessar TikTok</a></div>
+    <div class="content"><p>Assistir um tiktokzinho né JP? Vai ver uns memes, dar umas boas risadas e perder a noção do tempo kkkkk.</p><a class="open-btn" href="https://www.tiktok.com" target="_blank">Acessar TikTok</a></div>
+
     <div class="item" onclick="toggle(1)">Instagram <span class="arrow">ᐅ</span></div>
-    <div class="content"><p>Eai JP, alguém mandou mensagem?.. Ou vai só ver o feed mesmo?..</p><a class="open-btn" href="https://www.instagram.com" target="_blank">Acessar Instagram</a></div>
+    <div class="content"><p>E aí JP, será que alguém te notou hoje? Vai checar o feed ou ver se chegou DM nova? 👀</p><a class="open-btn" href="https://www.instagram.com" target="_blank">Acessar Instagram</a></div>
+
     <div class="item" onclick="toggle(2)">YouTube <span class="arrow">ᐅ</span></div>
-    <div class="content"><p>Assistir um videozinho né naqueles pique.. Ou só vai de shorts mesmo? haha</p><a class="open-btn" href="https://www.youtube.com" target="_blank">Acessar YouTube</a></div>
+    <div class="content"><p>Bora ver uns vídeos brabos? Ou vai ficar só no shorts infinito que prende a alma? 🤣</p><a class="open-btn" href="https://www.youtube.com" target="_blank">Acessar YouTube</a></div>
+
     <div class="item" onclick="toggle(3)">ChatGPT <span class="arrow">ᐅ</span></div>
-    <div class="content"><p>Chatzinho é daora mermão, vai tratar de algum assunto sério? Ou só algo que tu não conseguiu resolver ainda? Kkkkk</p><a class="open-btn" href="https://chat.openai.com" target="_blank">Acessar ChatGPT</a></div>
+    <div class="content"><p>Bora trocar uma ideia? Ou resolver aquele bagulho que tu adiou desde ontem? 😂</p><a class="open-btn" href="https://chat.openai.com" target="_blank">Acessar ChatGPT</a></div>
+
     <div class="item" onclick="toggle(4)">Gmail <span class="arrow">ᐅ</span></div>
-    <div class="content"><p>O que foi dessa vez? Código? Vai responder e-mail?..</p><a class="open-btn" href="https://mail.google.com" target="_blank">Acessar Gmail</a></div>
+    <div class="content"><p>Código chegando? Lembrança de prova? Ou só um e-mail aleatório nada a ver kkkkk.</p><a class="open-btn" href="https://mail.google.com" target="_blank">Acessar Gmail</a></div>
+
 </div>
 
-<div style="width:350px; background:white; border-radius:20px; padding:25px; height:fit-content;">
-    <h2 style="font-family:'Horizon', sans-serif; font-size:1.8rem; margin-top:0;">Sobre o site</h2>
-    <ul style="list-style:none; padding:0; line-height:1.8;">
-        <li>• Atalhos rápidos para apps</li>
-        <li>• Mensagens personalizadas</li>
-        <li>• Saudações dinâmicas (manhã/tarde/noite)</li>
-        <li>• Expansão animada dos tópicos</li>
-        <li>• Layout minimalista e leve</li>
-        <li>• Design focado no JP 🔥</li>
-    </ul>
+<div class="side-box">
+    <h2 class="side-title">Sobre o site</h2>
+
+    <p>Criei esse site só pra deixar minha vida mais rápida mesmo, sem ter que ficar caçando link toda hora. Aqui eu clico e já vou direto onde preciso.</p>
+
+    <p>Coloquei umas mensagens só pra deixar o bagulho mais leve, já que entrar em rede social às vezes dá vontade de sumir kkkkk.</p>
+
+    <p>A saudação muda conforme a hora, porque eu sou chique e gosto de frescura.</p>
+
+    <p>Visualzinho limpo, animadinho, com degrade quente porque combina comigo 🔥</p>
+
+    <p><b>FEITO POR JP</b></p>
 </div>
 
 </div>
@@ -155,7 +186,22 @@ const h = new Date().getHours();
 const g = document.getElementById("greeting");
 g.innerHTML = h < 12 ? "Bom dia, JP!" : h < 18 ? "Boa tarde, JP!" : "Boa noite, JP!";
 window.onscroll = () => { if (window.scrollY > 10) document.body.classList.add("scrolled"); else document.body.classList.remove("scrolled"); };
-function toggle(i){const items=document.querySelectorAll(".item");const contents=document.querySelectorAll(".content");const item=items[i];const content=contents[i];const isOpen=item.classList.contains("active");items.forEach((el,x)=>{el.classList.remove("active");contents[x].style.maxHeight="0px"});if(!isOpen){item.classList.add("active");content.style.maxHeight=content.scrollHeight+"px";}}
+
+function toggle(i){
+    const items=document.querySelectorAll(".item");
+    const contents=document.querySelectorAll(".content");
+    const item=items[i];
+    const content=contents[i];
+    const isOpen=item.classList.contains("active");
+    items.forEach((el,x)=>{
+        el.classList.remove("active");
+        contents[x].style.maxHeight="0px"
+    });
+    if(!isOpen){
+        item.classList.add("active");
+        content.style.maxHeight=content.scrollHeight+"px";
+    }
+}
 </script>
 
 </body>
